<package format="3">
  <name>state_estimator</name>
  <version>1.0.0</version>
  <description>State Estimator for the Side Scan Sonar SLAM pipeline</description>
  <maintainer email="karate.martynas1@gmail.com">Martynas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>marine_acoustic_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>